--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,10 +4,13 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical" >
-    <TextView android:layout_width="wrap_content"
+
+    <TextView
+        android:id="@+id/question_text_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/question_text" />
+    />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -18,13 +21,24 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/true_button" />
+            android:text="@string/true_button"
+        />
 
         <Button
             android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/false_button" />
+            android:text="@string/false_button"
+        />
+
+        <Button
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/next_question_button"
+            android:drawableRight="@drawable/arrow_right"
+            android:drawablePadding="4dp"
+        />
 
     </LinearLayout>
 
