--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -30,6 +30,21 @@
             android:layout_height="wrap_content"
             android:text="@string/false_button"
         />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableRight="@drawable/arrow_left"
+            android:text="@string/prev_question_button"
+            android:drawablePadding="4dp"
+        />
 
         <Button
             android:id="@+id/next_button"
@@ -39,6 +54,8 @@
             android:drawableRight="@drawable/arrow_right"
             android:drawablePadding="4dp"
         />
+
+
 
     </LinearLayout>
 
